Cambios QMAX
Cambios QMAX respecto a solucion original.